--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -36,16 +36,16 @@ RUN adduser --disabled-login \
 
 # copy necessary scripts
 WORKDIR /home/etho/
-COPY get-geth.sh ./get-geth.sh
+COPY get-node.sh ./get-node.sh
 COPY get-node-info.sh ./get-node-info.sh
 COPY get-version.sh ./get-version.sh
 COPY limits.conf ./limits.conf
 
 # set execution rights
-RUN chmod +x ./get-geth.sh ./get-node-info.sh ./get-version.sh
+RUN chmod +x ./get-node.sh ./get-node-info.sh ./get-version.sh
 
 # get latest geth
-RUN ./get-geth.sh
+RUN ./get-node.sh
 RUN mv ./geth /usr/sbin/geth-etho
 RUN chmod +x /usr/sbin/geth-etho
 
