--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,17 +29,33 @@ services:
       - AUTOHEAL_INTERVAL=5
       - STOP_TIMEOUT=120
 
+  ip-map:
+    restart: always
+    init: true
+    build: ./containers/ip-map
+    stop_grace_period: 2m
+    network_mode: host
+    cap_add:
+      - NET_ADMIN
+    volumes:       
+      - "./.icc/map-ip:/map-ip:ro"
+      - "./.icc/mapped-ip:/mapped-ip:rw"
+
   mn:
     restart: always
     init: true
-    build: ./container
+    build: ./containers/etho
     stop_grace_period: 2m
     volumes:
       - "./data:/home/etho/.ether1:rw"
+      - "./.icc/map-ip:/map-ip:rw"
+      - "./.icc/mapped-ip:/mapped-ip:ro"
     pids_limit: 75
     labels:
       - autoheal=true
     ports:
       - "30305:30305"
+    env_file:
+      - "./.env"
 #    security_opt:
 #      - apparmor=ETHO-armor
