--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,8 +43,8 @@ services:
     cap_add:
       - NET_ADMIN
     volumes:       
-      - "./.icc/map-ip:/map-ip:ro"
-      - "./.icc/mapped-ip:/mapped-ip:rw"
+      - "./.icc/etho:/etho:ro"
+      - "./.icc/ip-map:/ip-map:rw"
     logging:
       options:
         max-size: '5m'
@@ -58,8 +58,8 @@ services:
     stop_grace_period: 2m
     volumes:
       - "./data:/home/etho/.ether1:rw"
-      - "./.icc/map-ip:/map-ip:rw"
-      - "./.icc/mapped-ip:/mapped-ip:ro"
+      - "./.icc/etho:/etho:rw"
+      - "./.icc/ip-map:/ip-map:ro"
     pids_limit: 100
     labels:
       - autoheal=true
