--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 .vscode
 data/*
 !data/.gitkeep
+data/ethofs/*
+!data/ethofs/swarm.key
+data/etho/*
+!data/etho/.gitkeep
+data/etho/geth/*
+!data/etho/geth/.gitkeep
+
 docs
 .icc/ip-map/*
 .icc/etho/*
